refactor: improve path current user
