# storage/api-docs/api-docs.json
@@ -324,13 +324,13 @@
                 }
             }
         },
-        "/user": {
+        "/users/me": {
             "get": {
                 "tags": [
                     "users"
                 ],
                 "summary": "Get the current user",
-                "operationId": "366f803ccd51a727a8233c1bb8a35cbc",
+                "operationId": "aa1a357ae0e4e02750464b4c529bbcb9",
                 "responses": {
                     "200": {
                         "description": "successful operation",
@@ -426,7 +426,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Delete user",
+                "summary": "Delete user account",
                 "operationId": "07c20bd140bbecb9cd2c781c6183fbe5",
                 "responses": {
                     "200": {
